query curve by id; convert curve from db 2 client and vise versa;
