# src/swagger/controllers/Curve.js
@@ -1,0 +1,12 @@
+'use strict';
+var url = require('url');
+var Curve = require('./CurveService');
+var EAction = require('../../exception.js').action;
+
+module.exports.findCurveById = function findCurveById (req, res, next) {
+	try{
+		Curve.findCurveById(req.swagger.params, res, next);		
+	}catch(e){
+		EAction(res, e);
+	}
+};
